Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-11243

QApplication::keyboardModifiers not updated when dragging window

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P3: Somewhat important
    • None
    • 4.6.2
    • Core: Event loop
    • None
    • Mircosoft Windows 7 Ultimate (32-bit)
      Qt SDK 2010.02.1
    • 3b5354386225974ea6db78c12f32cb81e2d50104 9a16e146663210a4b7cdedc9b2a3dcd57cb1cbec

    Description

      If you start dragging a window (say a floating QDockWidget) and then press and hold say the Control key, QApplication::keyboardModifiers() indicates the Control key is not held down when it is. Because of this, I can't check if the Control key is held down by checking QApplication::keyboardModifiers() and updating the allowed docking areas to prevent docking if the Control key is held down.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            dfaure David Faure (Private)
            net147 Jonathan Liu
            Votes:
            1 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes