src/gui/kernel/qapplication_s60.cpp
@@ -114,6 +114,8 @@ QWidget *qt_button_down = 0;                     // widget got last button-down
 
 QSymbianControl *QSymbianControl::lastFocusedControl = 0;
 
+static Qt::KeyboardModifiers app_keyboardModifiers = Qt::NoModifier;
+
 QS60Data* qGlobalS60Data()
 {
     return qt_s60Data();
@@ -712,6 +714,7 @@ void QSymbianControl::HandlePointerEvent(const TPointerEvent& pEvent)
     Qt::MouseButton button;
     mapS60MouseEventTypeToQt(&type, &button, &pEvent);
     Qt::KeyboardModifiers modifiers = mapToQtModifiers(pEvent.iModifiers);
+    app_keyboardModifiers = modifiers;
 
     QPoint widgetPos = translatePointForFixedNativeOrientation(pEvent.iPosition);
     TPoint controlScreenPos = PositionRelativeToScreen();
@@ -2539,6 +2542,11 @@ bool QApplication::isEffectEnabled(Qt::UIEffect /* effect */)
 void QApplication::setEffectEnabled(Qt::UIEffect /* effect */, bool /* enable */)
 {
     // TODO: Implement QApplication::setEffectEnabled(Qt::UIEffect effect, bool enable)
+}
+
+Qt::KeyboardModifiers QApplication::queryKeyboardModifiers()
+{
+    return app_keyboardModifiers;
 }
 
 TUint QApplicationPrivate::resolveS60ScanCode(TInt scanCode, TUint keysym)
