src/gui/kernel/qapplication_win.cpp
@@ -1270,6 +1270,11 @@ Qt::KeyboardModifiers qt_win_getKeyboardModifiers()
     return modifiers;
 }
 
+Qt::KeyboardModifiers QApplication::queryKeyboardModifiers()
+{
+    return qt_win_getKeyboardModifiers();
+}
+
 /*****************************************************************************
   Routines to find a Qt widget from a screen position
  *****************************************************************************/
